--- a/views/edit.jade
+++ b/views/edit.jade
@@ -5,29 +5,35 @@ block content
   form.newForm(method='post', action='/rests/#{rests.id}')
     fieldset
       legend Create Restaurant
-      label.block.not(for='name') Name
+      br
+      label.block.margTop0(for='name') Name
       input.block(type='text', name='name', value= rests.name)
+      br
       label.block(for='location') Location
       input.block(type='text', name='location', value= rests.location)
+      br
       select.block(name='state')
         for state in states
           option(value= state, selected=(rests.state === state ? true : undefined)) #{state}
+      br
       label.block(for='cuisine') Cuisine 
       select.block(name='cuisine')
         for cuisine in cuisineList
           option(value = cuisine selected=(rests.cuisine === cuisine ? true : undefined)) #{cuisine}
+      br
       div.radio
-        label(for='rating') Rating: 
-        input.rg(type='radio',name='rating',value='1', checked=(rests.rating == 1 ? true : undefined))
-        input.rg(type='radio',name='rating',value='2', checked=(rests.rating == 2 ? true : undefined))
-        input.rg(type='radio',name='rating',value='3', checked=(rests.rating == 3 ? true : undefined))
-        input.rg(type='radio',name='rating',value='4', checked=(rests.rating == 4 ? true : undefined))
-        input.rg(type='radio',name='rating',value='5', checked=(rests.rating == 5 ? true : undefined))
+        label.margRight12(for='rating') Rating: 
+        input.radio(type='radio',name='rating',value='1', checked=(rests.rating == 1 ? true : undefined))
+        input.radio(type='radio',name='rating',value='2', checked=(rests.rating == 2 ? true : undefined))
+        input.radio(type='radio',name='rating',value='3', checked=(rests.rating == 3 ? true : undefined))
+        input.radio(type='radio',name='rating',value='4', checked=(rests.rating == 4 ? true : undefined))
+        input.radio(type='radio',name='rating',value='5', checked=(rests.rating == 5 ? true : undefined))
+      br
       div.imageContainer
-        label(for='image') Image: 
+        label(for='image').margRight12 Image: 
         input.image(type='text', name='image', value= rests.image)
+      br
       textarea.block(name='bio', rows='10', cols='40') #{rests.bio}
       div.btns
         button.button(type='submit', name='submit', value='submit') Submit  
         button.button.red(type='submit', name='submit', value='cancel') Cancel
-      
