--- a/views/show.jade
+++ b/views/show.jade
@@ -5,15 +5,17 @@ block content
   img.showImage(src= rests.image)
   div.showRight
     p.showText #{rests.cuisine} cuisine
+    br
     p.showText Located in #{rests.location}, #{rests.state}
     br
     p.showText #{rests.bio}
+    br
     p 
       span.showText Rating: 
       -var rating = rests.rating
       -for(var i = 0; i < rating; i++)
         i.yellow(class="fa fa-star")
-    div.buttons
+    div.buttonsDiv
       a.button(href='/rests/'+rests.id+'/edit') Edit
-      form(action='/rests/'+rests.id+'/delete', method='post')
+      form(action='/rests/'+rests.id+'/delete', method='get')
             input.button.red(type='submit', name='delete', value='Delete')
