--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,4 @@ html
     link(rel='stylesheet', href='/stylesheets/font-awesome-4.5.0/css/font-awesome.min.css')
 
   body
-    block whatever
+    block content
