--- a/views/show.jade
+++ b/views/show.jade
@@ -29,9 +29,9 @@ block content
             p #{review.date}
           p.review.r #{review.review}  
           div.revBottom
-            p.revRating 
+            p.revRating
               span.showText Rating: 
               -var rating = review.rating
               -for(var i = 0; i < rating; i++)
                 i.yellow(class="fa fa-star")
-            a.button(href='/rests/'+review.id+'/edit') Edit
+            a.button(href='/rests/review/'+review.id) Edit
