--- a/views/edit.jade
+++ b/views/edit.jade
@@ -5,6 +5,8 @@ block content
   form.newForm(method='post', action='/rests/#{rests.id}')
     fieldset
       legend Create Restaurant
+      if error
+        p.redText Please complete all fields.
       br
       label.block.margTop0(for='name') Name
       input.block(type='text', name='name', value= rests.name)
@@ -35,5 +37,5 @@ block content
       br
       textarea.block(name='bio', rows='10', cols='40') #{rests.bio}
       div.btns
-        button.button(type='submit', name='submit', value='submit') Submit  
-        button.button.red(type='submit', name='submit', value='cancel') Cancel
+        input.button(type='submit', name='submit', value='submit')  
+        input.button.red(type='submit', name='submit', value='cancel')
