--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@
 
 body {
   width: 100vw;
-  font: 5vw "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 1vw "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -27,7 +27,10 @@ header {
   position: relative;
 }
 
-
+.center {
+  display:block;
+  margin: 0 auto;
+}
 
 /*Index*/
 .goToNew {
@@ -75,7 +78,7 @@ header {
 .restoName{
   height: 5vw;
   line-height: 5vw;
-  font-size: .6em;
+  font-size: 3em;
   color: #747474;
 }
 /**/
@@ -88,7 +91,7 @@ header {
 .restoCuisine {
   height: 5vw;
   line-height: 5vw;
-  font-size: .4em;
+  font-size: 2em;
 }
 
 /**/
@@ -101,7 +104,7 @@ header {
   height: 5vw;
   line-height: 2.5vw;
   width: 60%;
-  font-size: .3em;
+  font-size: 1.5em;
   float: left;
 }
 
@@ -109,7 +112,7 @@ header {
   width: 40%;
   height: 5vw;
   line-height: 2.5vw;
-  font-size: .4em;
+  font-size: 2em;
   color: yellow;
   text-align: right;
   float: left;
@@ -307,4 +310,37 @@ fieldset > * {
 
 .revRating .showText {
   font-size: 2vmin
+}
+
+
+
+.mapDimensions {
+  width: 60vw;
+  height: 60vh;
+  margin: 3em auto;
+}
+
+.mapSmall {
+  width: 40vw;
+  height: 40vh;
+  margin: 1em auto;
+}
+
+.mapInfo {
+  font-size: 3em;
+  margin: 1em 0;
+  text-align: center;
+}
+
+.bigFields{
+  text-align: center;
+}
+
+.bigFields *:not(legend) {
+  height: 7vh;
+  line-height: 5vh;
+  font-size: 3em;
+  width: 40vw;
+  margin: 1em auto;
+  float: none;
 }
