--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome-4.5.0/css/font-awesome.min.css')
+    script(type="text/javascript", src="https://code.jquery.com/jquery-2.2.0.min.js")
 
   body
     block content
